# target-postgres

./: README.md  pyproject.toml
target_postgres/: postgres.py  singer_stream.py  target_tools.py
