[project]
name = "singer-target-postgres"
version = "0.2.4"
description = "Singer.io target for loading data into postgres"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = "MIT"
packages = [{include = "target_postgres"}]
requires-python = ">=3.7"
dependencies = [
    "arrow>=1.2.3,<2.0.0",
    "psycopg2-binary>=2.9.5,<3.0.0",
    "singer-python>=5.9.0,<6.0.0"
]

[project.urls]
"Homepage" = "https://github.com/minwareco/target-postgres"
"Bug Tracker" = "https://github.com/minwareco/target-postgres/issues"

[project.scripts]
# CLI declaration
target-postgres = "target_postgres:cli"

[project.optional-dependencies]
tests = [
    "chance==0.110",
    "Faker==15.1.3",
    "pytest==7.2.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
